# surp

./: .gitignore  .swo  1655826358670O-result.csv  AGB model parameters.ipynb  APOGEE.ipynb  APOGEE_alla_Jack.ipynb  Animation Thyme.ipynb  C12_C13.ipynb  C_Notes.ipynb  C_agb_models.ipynb  C_agb_models1.ipynb  C_analytic.ipynb  C_cc_yields.ipynb  C_combined_models.ipynb  C_eta.ipynb  C_eta1.ipynb  C_fit.ipynb  C_modified_eta_yields.ipynb  C_sfh.ipynb  C_sfh1.ipynb  C_validity1.ipynb  Carbon Singlezone 2.ipynb  Carbon Singlezone.ipynb  Carbon SinglezoneFe.ipynb  Carbon-CCSNe.ipynb  Carbon-Model-Validity.ipynb  Carbon-ModelComparison.ipynb  Carbon-SFH-1.ipynb  Carbon-SFH.ipynb  Carbon.ipynb  CarbonYields.ipynb  DTD-SFH.ipynb  Equi-solve.ipynb  Equilibrium tracks-C12_C13.ipynb  Equilibrium tracks-New.ipynb  Equilibrium tracks-given_co.ipynb  Equilibrium tracks.ipynb  Gaia.ipynb  Galactic Chemical Evolution Notes.ipynb  J+21.ipynb  (+56 more)
analysis_scripts/: apogee_analysis.py  carbon_yield_plots.py  gas_phase_data.py  model_comparer.py  plotting_utils.py  rc_params.py  vice_model.py  vice_to_json.py  vice_to_pickle.py  vice_utils.py
analytic_carbon/: analytic_verification.ipynb
carbon_paper/: Equi-simple.ipynb  Untitled.ipynb  agb_m_factor.ipynb  agb_yields.ipynb  agb_yields.py  agb_yields_mcmc_approx.ipynb  all_da_data.ipynb  all_data.csv  all_plots.ipynb  analytic_agb.ipynb  arya_models.ipynb  arya_test-Copy1.ipynb  arya_test.ipynb  c+n.ipynb  carbon_equations.md  cc_plot_utils.py  ccsne_yields.ipynb  equilibrium_infrence.ipynb  equilibrium_validity.ipynb  errors.py  evo_slices.py  evo_tracks.py  explore_fiducial.ipynb  explore_models.ipynb  ff_test.ipynb  fiducial.ipynb  figure1.py  figure1b.py  figure1c.py  figure2.py  figure2b.py  figure3.py  journal.mplstyle  julia_plots.ipynb  kde_lowa.json  main.aux  main.bib  main.tex  make_plots.py  mc_agb_yield_fits.ipynb  (+48 more)
data/: DLA.toml  DLA_combined.csv  FLF21.csv  Fabbian09.csv  J_A+A_568_A25_table5.dat.fits  README.md  R_hist.csv  R_subgiants_cdf.csv  TSC17.tsv  amarsi_19.tsv  bensby19.tsv  bensby21.tsv  berg16.csv  berg19.csv  (+15 more)
surp/: __init__.py  _globals.py  agb_interpolator.py  c_isotopic_yields.py  errors.py  gce_math.py  meson.build  plots.py  subgiants.py  utils.py  vice_model.py  vice_utils.py  vincenzo.py  yield_models.html  yield_models.py  yield_models.pyx  yield_params.py  yield_params.toml  yields.py
surp/analysis/: __init__.py  apogee_analysis.py  carbon_yield_plots.py  gce_math.py  result.py  vice_model.py  vincenzo.py  visualize_model.py
surp/simulation/: __init__.py  create_model.py  defaults.json  disks.py  filter_warnings.py  json_outputs.py  multizone_sim.py  parameters.py  properties.py  sfh_models.py  star_formation_history.py  vice_to_json.py  vice_utils.py
surp/simulation/models/: __init__.py  insideout.py  model_utils.py  models.py  star_formation_history.py  twoexp.py  twoinfall.py  utils.py
surp/surp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1486 files in other folders)
