[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surp_aeyobd"
version = "0.0.1"
authors = [
    { name="Daniel Boyea", email="boyea.2@osu.edu" },
]
description = "My summer research code"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


