[build-system]
build-backend = "mesonpy"
requires = [
    "meson-python", 
    "Cython>=3.0.0",
    "numpy", 
]


[project]
name = "surp"
version = "0.1.0"
authors = [
    { name="Daniel Boyea", email="boyea.2@osu.edu" },
]

description = "A library for the carbon paper"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

test = [
    "pytest",
    "pytest-cov",
]


dependencies = [
    "vice",
    "numpy",
    "pandas",
    "toml",
    "pydantic"
]




[project.optional-dependencies]
plots = [
    "matplotlib",
    "scipy",
    "astropy"
]
interpolation = [
    "scipy"
]

full = [
    "arya"
]
