# cython_args = [
#   '-X language_level=3', '-X wraparound=False',
#   '-X initializedcheck=False', '-X nonecheck=False', '-X cdivision=True',
#   '-X profile=False',
# ] 


py.extension_module(
  'yield_models',
  'yield_models.pyx',
  # cython_args: cython_args,
  install: true,
  subdir: 'surp',
)


